--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "recharts": "^2.4.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "lodash": "^4.17.21",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
