--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "grommet": "^2.30.0",
+    "grommet-icons": "^4.9.0",
     "lodash": "^4.17.21",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
