--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-react": "^7.32.2",
     "grommet": "^2.30.0",
     "grommet-icons": "^4.9.0",
     "lodash": "^4.17.21",
     "typescript": "^5.0.0",
+    "prettier": "2.8.5",
     "vite": "^4.1.0"
   }
 }
