--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "recharts": "^2.4.3"
   },
   "devDependencies": {
+    "@types/human-number": "^1.0.0",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -22,6 +23,7 @@
     "grommet-icons": "^4.9.0",
     "human-number": "^2.0.1",
     "lodash": "^4.17.21",
+    "ramda": "^0.29.0",
     "typescript": "^5.0.0",
     "vite": "^4.1.0"
   }
